--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
             <li>Developing free software related to the Arameans.</li>
             <li>Increasing the awareness of Arameans to the outside world.</li>
             <li>Guiding and supporting projects related to the Arameans.</li>
-            <li>Translating Aramaic to 
+            <li>Translate Aramaic to and from any other world language.</li>
         </ul>
     </section>
     <section class="mt2">
