--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     </section>
     <section class="mt2">
         <h2>Vision</h2>
-        <p>Our vision is to protect, populate, and preserve the continuous ancient Aramean heritage.</p>
+        <p>Our vision is to populate, protect, and preserve the continuous ancient Aramean heritage.</p>
     </section>
     <section class="mt2">
         <h2>History</h2>
