--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
                 <figure class="pl2 pr2"><img src="assets/img/logo.png"></figure>
             </nav>
             <a href="research/ethnology" key="2">Ethnology</a>
+            <section>
+                <hr>
+                <a class="fr" href="contribute.html" key="2">Contribute</a>
+                <a class="pr2" href="contact.html" key="3">Contact</a>
+                <a class="pr2" href="faq.html" key="3">FAQ</a>
+                <a class="pr2" href="about.html" key="3">About</a>
+            </section>
         </div>
     </nav>
     <aside class="xl_dn"></aside>
