--- a/research/ethnology/index.html
+++ b/research/ethnology/index.html
@@ -45,13 +45,15 @@
     </nav>
 
     <section class="mt2">
-        <p>Arameans or Syriacs, also known as Native Syrians, are an ancient Semitic race from the Middle East, tracing their roots back to the Bronze Age, without disruptions in the history timeline. The first mention of the Arameans occurs in inscriptions discovered at Kalah-Shergat belonging to Tiglath Pileser I (c. 1100 BC). The terms Aramu, Armi, or Arame, are also mentioned in the Ebla tablets (c. 2300 BC), but with no evidence linked to the Arameans.</p>
+        <p>Arameans or Syriacs, also known as Native Syrians, are an ancient Semitic race from the Middle East, tracing their lineage back to Aram, son of Shem, according to the Table of Nations in Genesis 10 of the Bible.
+        <br><br>
+        <p>The terms Aramu, Armi, or Arame, appears for the first time in the Ebla tablets (c. 2300 BC), indicating a region in Upper Mesopotamia where Arameans have settled. The first explicit mentioning of the Arameans as a people occurs in inscriptions discovered at Kalah-Shergat belonging to Tiglath Pileser I (c. 1100 BC).</p>
         <br>
         <p>Aramaic is the language of the Aramean people which once was the lingua franca of the ancient Near East, replacing earlier Semitic languages. The language has developed through time and has been divided into East and West varieties, but it has never ceased to exist as a spoken or written language. Aramaic is one of the world's oldest recorded living languages (c. 900 BC), predating Hebrew and Arabic.</p>
         <br>
         <p>The largest Aramean populations today exist in Syria, Iraq, USA, Lebanon, Sweden, Germany, and smaller populations are scattered around the globe. The total population is estimated to be around 5 million, excluding none Native Syriacs from India belonging to the Syrian Christian church.</p>
         <hr class="mt2">
-        <small>Published: 2020-09-01, Last update: 2020-12-27</small>
+        <small>Published: 2020-09-01, Last update: 2020-12-30</small>
     </section>
 
 </article>
