--- a/research/ethnology/index.html
+++ b/research/ethnology/index.html
@@ -45,7 +45,7 @@
     </nav>
 
     <section class="mt2">
-        <p>Arameans or Syriacs, also known as Native Syrians, are an ancient Semitic race from the Middle East, tracing their lineage back to Aram, son of Shem, according to the Table of Nations in Genesis 10 of the Bible.
+        <p>Arameans or Syriacs, also known as Native Syrians, are an ancient Semitic race from the Middle East, tracing their lineage back to Aram, son of Shem, found in the Table of Nations in Genesis 10 of the Bible.
         <br><br>
         <p>The terms Aramu, Armi, or Arame, appears for the first time in the Ebla tablets (c. 2300 BC), indicating a region in Upper Mesopotamia where Arameans have settled. The first explicit mentioning of the Arameans as a people occurs in inscriptions discovered at Kalah-Shergat belonging to Tiglath Pileser I (c. 1100 BC).</p>
         <br>
