--- a/home.html
+++ b/home.html
@@ -1,20 +1,47 @@
-<article class="hm100 bcred white dac" slide="[{ athing: 'quack', dohickey: 3 }]">
-    <section class="hm100 w100 pauto slide">
-        <h1>Aram and Israel relations</h1>
-        <h3 class="beige">"Arameans and the Hebrew Patriarchs have shared origins and marriage ties existed between the peoples."</h3>
-        <button class="p1 bcyellow red mt1 br05">Read more</button>
-    </section>
-    <section class="hm100 w100 pauto slide">
-        <h1>Kaldu-Arameans</h1>
-        <h3 class="beige">"Chaldeans are Arameans from the tribe of Kaldu or (Kasdu) conquering and destroying the Assyrian Empire."</h3>
-    </section>
-    <div class="pa yellow swhite- b1 w100 flc" selective="true">
-        <a class="icon48 dot sel" onclick="slideTo(1)">&#9679;</a>
-        <a class="icon48 dot" onclick="slideTo(2)">&#9679;</a>
-    </div>
-</article>
+<section class="hm100 bcred white dac" slide="[{ athing: 'quack', dohickey: 3 }]">
 
-<article class="hm100">
+    <nav class="slider dc fs2 gap05-">
+        <div class="f2"><i class="icon64">&#706;</i></div>
+        <input type="radio" name="slidernewdemo" id="sliderdemo1" checked>
+        <label for="sliderdemo1" class="footer icon24">&#9679;</label>
+        <section>
+            
+            <article>
+                <h1>Aram and Israel relations</h1>
+                <h3 class="beige tshade1">"Arameans and the Hebrew Patriarchs have shared origins and marriage ties existed between the peoples."</h3>
+                <button class="p1 bcyellow red mt1 br05">Read more</button>
+            </article>
+
+            <figure>
+                <img src="assets/img/slide1.jpg">
+            </figure>
+        </section>
+
+        <input type="radio" name="slidernewdemo" id="sliderdemo2">
+        <label for="sliderdemo2" class="footer icon24">&#9679;</label>
+        <section>
+
+            <article>
+                <h1>Kaldu-Arameans</h1>
+                <h3 class="beige">"Chaldeans are Arameans from the tribe of Kaldu or (Kasdu) conquering and destroying the Assyrian Empire."</h3>
+                <button class="p1 bcyellow red mt1 br05">Read more</button>
+            </article>
+
+            <figure>
+                <img src="assets/img/slide2.jpg">
+            </figure>
+        </section>
+
+        <div class="f2"><i class="icon64">&#707;</i></div>
+    </nav>
+
+    
+</section>
+
+<section class="hm100">
     <section class="hm100 w100">
     </section>
-</article>
+</section>
+
+<section include="footer.html" class="light p1">
+</section>
