--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
     <nav class="slider dc gap05-">
         <div class="f2"><i class="icon64">&#706;</i></div>
         <input type="radio" name="slidernewdemo" id="sliderdemo1" checked>
-        <label for="sliderdemo1" class="footer icon24">&#9679;</label>
+        <label for="sliderdemo1" class="footer icon24 pb1">&#9679;</label>
         <section>
             
             <article>
@@ -18,7 +18,7 @@
         </section>
 
         <input type="radio" name="slidernewdemo" id="sliderdemo2">
-        <label for="sliderdemo2" class="footer icon24">&#9679;</label>
+        <label for="sliderdemo2" class="footer icon24 pb1">&#9679;</label>
         <section>
 
             <article>
