--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
         <label for="sliderdemo1" class="footer icon24 pb1">&#9679;</label>
         <section>
             
-            <article>
+            <article class="white">
                 <h1>Aram and Israel relations</h1>
                 <h3 class="beige tshade1">"Arameans and the Hebrew Patriarchs have shared origins and marriage ties existed between the peoples."</h3>
                 <button class="p1 bcyellow red mt1 br05">Read more</button>
@@ -21,7 +21,7 @@
         <label for="sliderdemo2" class="footer icon24 pb1">&#9679;</label>
         <section>
 
-            <article>
+            <article class="white">
                 <h1>Kaldu-Arameans</h1>
                 <h3 class="beige">"Chaldeans are Arameans from the tribe of Kaldu or (Kasdu) conquering and destroying the Assyrian Empire."</h3>
                 <button class="p1 bcyellow red mt1 br05">Read more</button>
