--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <form>
             
         </form>
-        <nav class="topbar light shade05 h3 gap2- test- z08 xl_dn fwb" selective="true">
+        <nav class="topbar dark shade05 h3 gap2- test- z08 xl_dn fwb" selective="true">
             <a class="fr bcred yellow p1" href="contribute.html" key="2">Contribute</a>
             <a class="pr2" href="contact.html" key="3">Contact</a>
             <a class="pr2" href="faq.html" key="3">FAQ</a>
