--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <section class="hm100 bcred white dac" slide="[{ athing: 'quack', dohickey: 3 }]">
 
     <nav class="slider dc gap05-">
-        <div class="f2"><i class="icon64">&#706;</i></div>
+        <div class="f2"><i class="icon64 bcblack02">&#706;</i></div>
         <input type="radio" name="slidernewdemo" id="sliderdemo1" checked>
         <label for="sliderdemo1" class="footer icon24 pb1">&#9679;</label>
         <section>
@@ -32,7 +32,7 @@
             </figure>
         </section>
 
-        <div class="f2"><i class="icon64">&#707;</i></div>
+        <div class="f2"><i class="icon64 bcblack02">&#707;</i></div>
     </nav>
 
     
