--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 </div>
 <article class="pauto">
     <section>
-        <p>The Aramean Institute is a multi-institute for the Aramean people researching different areas, developing technology, collecting data, educating, offering expertise, and publishing work.</p>    
+        <p>The Aramean Institute is a worldwide multi-institute for the Aramean people researching different areas, developing technology, collecting data, educating, offering expertise, and publishing work.</p>    
     </section>
     <section class="mt2">
         <h2>Mission</h2>
