--- a/home.html
+++ b/home.html
@@ -38,10 +38,9 @@
     
 </section>
 
-<section class="hm100">
+<section class="hm100 light">
     <section class="hm100 w100">
     </section>
 </section>
 
-<section include="footer.html" class="light p1">
-</section>
+<section include="footer.html" class="bcred white p1"></section>
