--- a/faq.html
+++ b/faq.html
@@ -27,7 +27,11 @@
               <input type="radio" name="panel" id="tab3">
               <label for="tab3">Why do Arameans call themselves Chaldeans or Assyrians?</label>
               <section>
-                <p>Due to the Colonization of the Middle East and, persecutions of Arameans, groups of the Arameans pledge alliances with the Westerners, in hope of being independent one day, and to restore the Middle East to its former glory. The ancient names such as Assyrians and Chaldeans were chosen accordingly to the geographical location of Assyria and Babylon provinces. The Syriac Churches of the East and the national separatist movements propagated the new identities amongst the people and created a bogus ethnology.</p>
+                <p>During the Colonization of the Middle East, groups of Arameans pledged alliances with Westerners, in hope of being protected against persecution and independence by pursuing the plan to restore the Middle East to its former glory.
+                <br><br>
+                Ancient names such as Assyrians and Chaldeans were chosen accordingly to the geographical location of the Assyrian and Babylonian provinces.
+                <br><br>
+                The Syriac Churches of the East and the national separatist movements propagated the new identities amongst the people and created bogus ethnologies.</p>
               </section>
             </nav>
     </section>
