--- a/faq.html
+++ b/faq.html
@@ -27,12 +27,12 @@
               <input type="radio" name="panel" id="tab3">
               <label for="tab3">Why do Arameans call themselves Chaldeans or Assyrians?</label>
               <section>
-                <p>During the Colonization of the Middle East, groups of Arameans pledged alliances with Westerners, in hope of being protected against persecution and independence by pursuing the plan to restore the Middle East to its former glory.
+                During the Colonization of the Middle East, groups of Arameans pledged alliances to Westerners in the hope of being independent, safe, and protected by accepting the Middle East plan.
                 <br><br>
-                Ancient names such as Assyrians and Chaldeans were chosen accordingly to the geographical location of the Assyrian and Babylonian provinces.
+                The terms Assyrian and Chaldean were chosen accordingly to the geographical location of the Assyrian and Babylonian provinces.
                 <br><br>
-                The Syriac Churches of the East and the national separatist movements propagated the new identities amongst the people and created bogus ethnologies.</p>
-              </section>
+                The Syriac Churches of the East and the national separatist movements propagated the new identities amongst the people and created bogus ethnologies.
+                </section>
             </nav>
     </section>
 </article>
