--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,3 @@
 <p>contact@aramean.insitute</p>
 <hr class="mt2 bcred shade1">
-<a href="https://www.facebook.com/aramean.institute" target="_blank"><i class="icon48 yellow">&#9429;</i></a>
+<a href="https://www.facebook.com/aramean.institute" target="_blank"><i class="icon48 white">&#9429;</i></a>
