--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 <section class="hm100 bcred white dac" slide="[{ athing: 'quack', dohickey: 3 }]">
 
-    <nav class="slider dc gap05-">
+    <nav class="slider tshade1 dc gap05-">
         <div class="f2"><i class="icon64 bcblack02">&#706;</i></div>
         <input type="radio" name="slidernewdemo" id="sliderdemo1" checked>
         <label for="sliderdemo1" class="footer icon24 pb1">&#9679;</label>
