--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <nav class="topbar dark shade05 h3 gap2- test- z08 xl_dn fwb" selective="true">
             <a class="fr bcred yellow p1" href="contribute.html" key="2">Contribute</a>
             <a class="pr2" href="contact.html" key="3">Contact</a>
+            <a class="pr2" href="press.html" key="3">Press</a>
             <a class="pr2" href="faq.html" key="3">FAQ</a>
             <a class="pr2" href="about.html" key="3">About</a>
         </nav>
@@ -32,7 +33,6 @@
         <a href="#menu" class="button xl_du bcwhite black p0 shade1"><i class="icon32">≡</i></a>
         <figure><a class="b0" href="./" target="_top" href2="home.html" key="0"><img src="assets/img/logo.png"></a></figure>
         <a href="research/ethnology" key="2">Ethnology</a>
-        <a href="research/linguistics" key="1">Linguistics</a>
         <a href="collection/statistics" key="1">Statistics</a>
         <a href="development/technology" key="3">Technology</a>
 
