--- a/press.html
+++ b/press.html
@@ -1,4 +1,4 @@
-<script src="https://3el.github.io/front/dist/front.js" title="Statistics" template="true"></script>
+<script src="https://3el.github.io/front/dist/front.js" title="Press" template="true"></script>
     
 <template>
     <aside index="0"></aside>
@@ -6,5 +6,5 @@
 </template>
 
 <div class="alert banner shade1 br0 pauto pt2 pb2 bcred white-">
-    <h1>Statistics</h1>
+    <h1>Press</h1>
 </div>
