--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
     </section>
     <section class="mt2">
         <h2>History</h2>
-        <p>The instutute was established 2020 by Josef Gabrielsson in Sweden.</p>
+        <p>The Aramean Instutute was established in late 2020 by Josef Gabrielsson from Sweden.</p>
     </section>
     <section class="mt2">
         <h2>Principles</h2>
