--- a/faq.html
+++ b/faq.html
@@ -14,7 +14,7 @@
         <nav class="tabs accordions">
 
             <input type="radio" name="panel" id="tab1">
-            <label for="tab1">Are the Syriacs and the Arameans the same?</label>
+            <label for="tab1">Are the Syriacs and the Arameans the same people?</label>
             <section>
                 <p>Yes, Native Syrians are the direct descendant of the Arameans. "Syriac; Syrian" is a Greek term meaning Aramean.</p>
             </section>
