--- a/research/ethnology/index.html
+++ b/research/ethnology/index.html
@@ -47,7 +47,7 @@
     <section class="mt2">
         <p>Arameans or Syriacs, also known as Native Syrians, are an ancient Semitic race from the Middle East, tracing their lineage back to Aram, son of Shem, found in the Table of Nations in Genesis 10 of the Bible.
         <br><br>
-        <p>The terms Aramu, Armi, or Arame, appears for the first time in the Ebla tablets (c. 2300 BC), indicating a region in Upper Mesopotamia where Arameans have settled. The first explicit mentioning of the Arameans as a people occurs in inscriptions discovered at Kalah-Shergat belonging to Tiglath Pileser I (c. 1100 BC).</p>
+        <p>The terms Aramu, Armi, and Arame, appears for the first time in the Ebla tablets (c. 2300 BC), indicating a region in Upper Mesopotamia where Arameans have settled. The first explicit mentioning of the Arameans as a people occurs in inscriptions discovered at Kalah-Shergat belonging to Tiglath Pileser I (c. 1100 BC).</p>
         <br>
         <p>Aramaic is the language of the Aramean people which once was the lingua franca of the ancient Near East, replacing earlier Semitic languages. The language has developed through time and has been divided into East and West varieties, but it has never ceased to exist as a spoken or written language. Aramaic is one of the world's oldest recorded living languages (c. 900 BC), predating Hebrew and Arabic.</p>
         <br>
