--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <section class="hm100 bcred white dac" slide="[{ athing: 'quack', dohickey: 3 }]">
 
     <nav class="slider tshade1 dc gap05-">
-        <div class="f2"><i class="icon64 bcblack02">&#706;</i></div>
+        <div class="sl"><a onclick="alert('c')"><i class="icon64 bcblack02">&#706;</i></a></div>
         <input type="radio" name="slidernewdemo" id="sliderdemo1" checked>
         <label for="sliderdemo1" class="footer icon24 pb1">&#9679;</label>
         <section>
@@ -9,7 +9,7 @@
             <article class="white">
                 <h1>Aram and Israel relations</h1>
                 <h3 class="beige tshade1">"Arameans and the Hebrew Patriarchs have shared origins and marriage ties existed between the peoples."</h3>
-                <button class="p1 bcyellow red mt1 br05">Read more</button>
+                <a href="#a" onclick="alert('a')" class="button p1 bcyellow red mt1 br05">Read more</a>
             </article>
 
             <figure>
@@ -24,7 +24,7 @@
             <article class="white">
                 <h1>Kaldu-Arameans</h1>
                 <h3 class="beige">"Chaldeans are Arameans from the tribe of Kaldu or (Kasdu) conquering and destroying the Assyrian Empire."</h3>
-                <button class="p1 bcyellow red mt1 br05">Read more</button>
+                <a href="#" class="button p1 bcyellow red mt1 br05">Read more</a>
             </article>
 
             <figure>
@@ -32,7 +32,7 @@
             </figure>
         </section>
 
-        <div class="f2"><i class="icon64 bcblack02">&#707;</i></div>
+        <div class="sr"><a onclick="alert('c')"><i class="icon64 bcblack02">&#707;</i></a></div>
     </nav>
 
     
