--- a/article/aram-israel.html
+++ b/article/aram-israel.html
@@ -19,7 +19,10 @@
     <article class="mt2">
         <p class="fwb">The Bible reveals that Arameans and the Hebrew Patriarchs have shared origins and marriage ties existed between the peoples.</p>
         <br>
-        <p>Both Arameans and Hebrews (Israelites) are a Semitic race tracing their lineage back to Sem, son of Noah.</p>
+        <p>Both Arameans and Hebrews (Israelites) are a Semitic race tracing their lineage back to Shem, son of Noah, but what ties their bound even stronger is Aram, son of Shem.</p>
+        <br>
+        <p>Aram the son of Shem played a huge role in forming the Middle East, he is regarded as being the ancestor of the Aramean people.</p>
+        
         <hr class="mt2 bcblack">
         <small class="gray">Published: 2021-01-08, Last update: 2021-01-09</small>
     </article>
