--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="https://3el.github.io/front/dist/front.js" lib="xhr;popup;nav;json;drag;i18n"></script>
     <!--<script src="http://localhost:8888/dist/front.js" lib="xhr;popup;nav;json;drag;i18n;physics"></script>-->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-0F425W2028"></script>
+    <script data-ad-client="ca-pub-8579327329241183" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body class="bg">
 
