--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,5 @@
 <p>contact@aramean.insitute</p>
-<hr class="mt2 bcred shade1">
+<hr class="mt1 bcred shade1">
+Aramean Institute &middot; <a href="about/">About</a> &middot; <a href="policy/privacy/">Privacy</a>
+<hr class="mt1 bcred shade1">
 <a href="https://www.facebook.com/aramean.institute" target="_blank"><i class="icon48 white">&#9429;</i></a>
