--- a/home.html
+++ b/home.html
@@ -43,4 +43,4 @@
     </section>
 </section>
 
-<section include="footer.html" class="bcred white p1"></section>
+<section include="footer.html" class="bcred white white- p1"></section>
