--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             
         </form>
         <nav class="topbar dark shade05 h2_5 gap2- test- z08 xl_dn fwb" selective="true">
-            <a class="fr bcred yellow p1" href="contribute.html" key="2">Contribute</a>
-            <a class="pr2" href="contact.html" key="3">Contact</a>
-            <a class="pr2" href="press.html" key="3">Press</a>
-            <a class="pr2" href="faq.html" key="3">FAQ</a>
-            <a class="pr2" href="about.html" key="3">About</a>
+            <a class="fr bcred yellow p1" href="contribute/" key="2">Contribute</a>
+            <a class="pr2" href="contact/" key="3">Contact</a>
+            <a class="pr2" href="press/" key="3">Press</a>
+            <a class="pr2" href="faq/" key="3">FAQ</a>
+            <a class="pr2" href="about/" key="3">About</a>
         </nav>
     </header>
 
@@ -45,10 +45,10 @@
             <a href="research/ethnology" key="2">Ethnology</a>
             <section>
                 <hr>
-                <a class="fr" href="contribute.html" key="2">Contribute</a>
-                <a class="pr2" href="contact.html" key="3">Contact</a>
-                <a class="pr2" href="faq.html" key="3">FAQ</a>
-                <a class="pr2" href="about.html" key="3">About</a>
+                <a class="fr" href="contribute/" key="2">Contribute</a>
+                <a class="pr2" href="contact/" key="3">Contact</a>
+                <a class="pr2" href="faq/" key="3">FAQ</a>
+                <a class="pr2" href="about/" key="3">About</a>
             </section>
         </div>
     </nav>
