--- a/article/aram-israel.html
+++ b/article/aram-israel.html
@@ -21,8 +21,7 @@
         <br>
         <p>Both Arameans and Hebrews (Israelites) are a Semitic race tracing their lineage back to Shem, son of Noah, but what ties their bound even stronger is Aram, son of Shem.</p>
         <br>
-        <p>Aram the son of Shem played a huge role in forming the Middle East, he is regarded as being the ancestor of the Aramean people.</p>
-        
+        <p>Aram, the son of Shem, played a role in forming many nations and spreading his offsprings around the Middle East. He is regarded as being the ancestor of the Arameans and the Jewish people.</p>
         <hr class="mt2 bcblack">
         <small class="gray">Published: 2021-01-08, Last update: 2021-01-09</small>
     </article>
