--- a/research/ethnology/index.html
+++ b/research/ethnology/index.html
@@ -53,7 +53,7 @@
         <br>
         <p>The largest Aramean populations today exist in Syria, Iraq, USA, Lebanon, Sweden, Germany, and smaller populations are scattered around the globe. The total population is estimated to be around 5 million, excluding none Native Syriacs from India belonging to the Syrian Christian church.</p>
         <br>
-        <p>The majority of the Aramean populations are Christians (Messianics) following either the West or East Syriac Churches were established in the 1st century.</p>        
+        <p>The majority of the Aramean populations are Christians (Messianics) following either the West or East Syriac Churches first established in the 1st century.</p>        
         <hr class="mt2 bcblack">
         <small class="gray">Published: 2020-09-01, Last update: 2021-01-09</small>
     </article>
