--- a/about/index.html
+++ b/about/index.html
@@ -1,4 +1,4 @@
-<script src="https://3el.github.io/front/dist/front.js" title="About Us" template="true"></script>
+<script src="https://3el.github.io/front/dist/front.js" title="About Us" template="../"></script>
 
 <template>
     <aside index="0"></aside>
@@ -31,7 +31,7 @@
     </section>
     <section class="mt2">
         <h2>History</h2>
-        <p>The Aramean Instutute was established in late 2020 by Josef Gabrielsson from Sweden.</p>
+        <p>The Aramean Institute was established in late 2020 by Josef Gabrielsson from Sweden.</p>
     </section>
     <section class="mt2">
         <h2>Principles</h2>
@@ -40,13 +40,13 @@
         <p>The institute rejects:</p>
         <ul class="list">
             <li>Theories outside the academic fields.</li>
-            <li>Statements and claims based on fanatism or rationalism.</li>
+            <li>Statements or claims based on fanatism or rationalism.</li>
             <li>Propaganda or political agendas.</li>
         </ul>
     </section>
     <section class="mt2">
         <h2>Financing</h2>
-        <p>The Institute is financied by Aramean organizations located in different parts of the world.</p>
+        <p>The Aramean Institute is a nonprofit institution in which no part of the organization's income is distributed to its members, directors, or officers. The institute is fully supported by its members and Aramean organizations located in different parts of the world.</p>
     </section>
     <section class="mt2">
         <h2>Contributors</h2>
