--- a/collection/statistics/index.html
+++ b/collection/statistics/index.html
@@ -1,4 +1,4 @@
-<script src="https://3el.github.io/front/dist/front.js" title="Statistics" template="true"></script>
+<script src="https://3el.github.io/front/dist/front.js" title="Statistics" template="../"></script>
     
 <template>
     <aside index="0"></aside>
