--- a/about/index.html
+++ b/about/index.html
@@ -46,7 +46,8 @@
     </section>
     <section class="mt2">
         <h2>Financing</h2>
-        <p>The Aramean Institute is a nonprofit institution in which no part of the organization's income is distributed to its members, directors, or officers. The institute is fully supported by its members and Aramean organizations located in different parts of the world.</p>
+        <p>The Aramean Institute is a nonprofit institution in which no part of the organization's income is distributed to its members, directors, or officers.</p>
+        <p>The institute is fully supported by its members and Aramean organizations located in different parts of the world.</p>
     </section>
     <section class="mt2">
         <h2>Contributors</h2>
