--- a/policy/privacy/index.html
+++ b/policy/privacy/index.html
@@ -32,10 +32,10 @@
 <section class="pauto">
     <article>
         <p>
-            Thank you for choosing to be part of our community at Aramean Institute ("<b>Company</b>", "<b>we</b>", "<b>us</b>", "<b>our</b>"). We are committed to protecting your personal information and your right to privacy. If you have any questions or concerns about this privacy notice or our practices with regards to your personal information, please contact us at contact@aramean.institute.
+            Thank you for choosing to be part of our community at Aramean Institute ("<b>Organization</b>", "<b>we</b>", "<b>us</b>", "<b>our</b>"). We are committed to protecting your personal information and your right to privacy. If you have any questions or concerns about this privacy notice or our practices with regards to your personal information, please contact us at contact@aramean.institute.
         </p>
         <p class="mt2">
-            When you visit our website https://www.aramean.institute (the "<b>Website</b>"), and more generally, use any of our services (the "<b>Services</b>", which include the Website ), we appreciate that you are trusting us with your personal information. We take your privacy very seriously. In this privacy notice, we seek to explain to you in the clearest way possible what information we collect, how we use it, and what rights you have concerning it.
+            When you visit our website https://www.aramean.institute (the "<b>Website</b>"), and more generally, use any of our services (the "<b>Services</b>", which include the Website), we appreciate that you are trusting us with your personal information. We take your privacy very seriously. In this privacy notice, we seek to explain to you in the clearest way possible what information we collect, how we use it, and what rights you have concerning it.
             We hope you take some time to read through it carefully, as it is important. 
             If there are any terms in this privacy notice that you do not agree with, please discontinue use of our Services immediately.
         </p>
