--- a/policy/privacy/index.html
+++ b/policy/privacy/index.html
@@ -25,7 +25,7 @@
 </template>
 
 <div class="alert banner shade1 br0 pauto pt2 pb2 bcred white-">
-    <h1>Policy Privacy</h1>
+    <h1>Privacy Policy</h1>
     <h6>Last updated: 2021-01-09</h6>
 </div>
 
@@ -219,10 +219,7 @@
         <div id="contact" class="fdc mt2">
             <h4>14. How can you contact us regarding this notice?</h4>
             <br>
-            If you have questions or comments about this notice, you may email us at privacy@aramean.institute or by post to:
-            <br><br>Aramean Institute <br>
-            __________<br>
-            __________<br> Sweden <br><br>
+            If you have questions or comments about this notice, you may email us at policy@aramean.institute.
         </div>
         <div id="request" class="fdc mt2">
             <h4>15. How can you review, update, or delete the data we collect from you?</h4>
