--- a/policy/privacy/index.html
+++ b/policy/privacy/index.html
@@ -219,7 +219,7 @@
         <div id="contact" class="fdc mt2">
             <h4>14. How can you contact us regarding this notice?</h4>
             <br>
-            If you have questions or comments about this notice, you may email us at policy@aramean.institute.
+            <p>If you have questions or comments about this notice, you may email us at policy@aramean.institute.</p>
         </div>
         <div id="request" class="fdc mt2">
             <h4>15. How can you review, update, or delete the data we collect from you?</h4>
