--- a/collection/statistics/index.html
+++ b/collection/statistics/index.html
@@ -1,4 +1,4 @@
-<script src="https://3el.github.io/front/dist/front.js" title="Statistics" template="../"></script>
+<script src="https://3el.github.io/front/dist/front.js" title="Statistics" template="../../"></script>
     
 <template>
     <aside index="0"></aside>
@@ -8,3 +8,9 @@
 <div class="alert banner shade1 br0 pauto pt2 pb2 bcred white-">
     <h1>Statistics</h1>
 </div>
+
+<section class="pauto">
+    <article>
+        Not available!
+    </article>
+</section>
