--- a/press/index.html
+++ b/press/index.html
@@ -8,3 +8,9 @@
 <div class="alert banner shade1 br0 pauto pt2 pb2 bcred white-">
     <h1>Press</h1>
 </div>
+
+<section class="pauto">
+    <article>
+        Not available!
+    </article>
+</section>
