--- a/contact/index.html
+++ b/contact/index.html
@@ -32,7 +32,7 @@
 
                 <div class="gap1-">
                     <button class="fr outlined" type="reset">Reset</button>
-                    <button type="submit">Send</button>
+                    <button type="submit">Send message</button>
                 </div>
         
         </form>
