--- a/about/index.html
+++ b/about/index.html
@@ -4,10 +4,12 @@
     <aside index="0"></aside>
     <aside index="1"></aside>
 </template>
+
 <div class="alert banner shade1 br0 pauto pt2 pb2 bcred white-">
     <h1>About Us</h1>
 </div>
-<article class="pauto">
+
+<article class="pauto wc_xl">
     <section>
         <p>The Aramean Institute is a worldwide multi-institute for the Aramean people researching different areas, developing technology, collecting data, educating, offering expertise, and publishing work.</p>    
     </section>
