--- a/about/index.html
+++ b/about/index.html
@@ -9,7 +9,7 @@
     <h1>About Us</h1>
 </div>
 
-<article class="pauto wc_xl">
+<article class="pauto wc_xxl">
     <section>
         <p>The Aramean Institute is a worldwide multi-institute for the Aramean people researching different areas, developing technology, collecting data, educating, offering expertise, and publishing work.</p>    
     </section>
