--- a/contact/index.html
+++ b/contact/index.html
@@ -9,7 +9,7 @@
     <h1>Contact Us</h1>
 </div>
 
-<article class="pauto">
+<article class="pauto wc_xxl">
     <section>
         <h4 class="tac">For all inquiries, please email us using this form below.</h4>
     </section>
