--- a/policy/cookie/index.html
+++ b/policy/cookie/index.html
@@ -5,7 +5,7 @@
     <h6>Last updated: 2021-01-09</h6>
 </div>
 
-<section class="pauto wc_xl">
+<section class="pauto wc_xxl">
     <article>
         <p>This Cookie Policy explains how Aramean Institute ("<b>Organization</b>", "<b>we</b>", "<b>us</b>", and
             "<b>our</b>") uses cookies and similar technologies to recognize you when you visit our websites at
