--- a/home.html
+++ b/home.html
@@ -6,8 +6,8 @@
         <label for="sliderdemo1" class="footer icon24 pb1">&#9679;</label>
         <section>
             
-            <article class="white">
-                <h1>Aram and Israel relations</h1>
+            <article class="white w80">
+                <h1 class="f22">Aram and Israel relations</h1>
                 <h3 class="beige tshade1">"Arameans and the Hebrew Patriarchs have shared origins and marriage ties existed between the peoples."</h3>
                 <a href="article/aram-israel.html" class="button p1 bcyellow red mt1 br05">Read more</a>
             </article>
@@ -22,7 +22,7 @@
         <section>
 
             <article class="white">
-                <h1>Kaldu-Arameans</h1>
+                <h1 class="f22 w80">Kaldu-Arameans</h1>
                 <h3 class="beige">"Chaldeans are Arameans from the tribe of Kaldu or (Kasdu) conquering and destroying the Assyrian Empire."</h3>
                 <a href="#" class="button p1 bcyellow red mt1 br05">Read more</a>
             </article>
