--- a/home.html
+++ b/home.html
@@ -6,10 +6,10 @@
         <label for="sliderdemo1" class="footer icon24 pb1">&#9679;</label>
         <section>
             
-            <article class="white w80">
+            <article class="white w70">
                 <h1 class="f22">Aram and Israel relations</h1>
                 <h3 class="beige tshade1">"Arameans and the Hebrew Patriarchs have shared origins and marriage ties existed between the peoples."</h3>
-                <a href="article/aram-israel.html" class="button p1 bcyellow red mt1 br05">Read more</a>
+                <a href="article/aram-israel.html" class="button p1 bcyellow red mt2 br05">Read more</a>
             </article>
 
             <figure>
@@ -21,10 +21,10 @@
         <label for="sliderdemo2" class="footer icon24 pb1">&#9679;</label>
         <section>
 
-            <article class="white">
-                <h1 class="f22 w80">Kaldu-Arameans</h1>
+            <article class="white w70">
+                <h1 class="f22">Kaldu-Arameans</h1>
                 <h3 class="beige">"Chaldeans are Arameans from the tribe of Kaldu or (Kasdu) conquering and destroying the Assyrian Empire."</h3>
-                <a href="#" class="button p1 bcyellow red mt1 br05">Read more</a>
+                <a href="#" class="button p1 bcyellow red mt2 br05">Read more</a>
             </article>
 
             <figure>
