--- a/article/aram-israel.html
+++ b/article/aram-israel.html
@@ -1,7 +1,5 @@
 <script src="https://3el.github.io/front/dist/front.js" title="Aram and Israel relations" template="../../"></script>
 
-<script src="https://3el.github.io/front/dist/front.js" title="Ethnology" template="../../"></script>
-
 <template>
     <aside index="0"></aside>
     <aside index="1"></aside>
@@ -21,7 +19,7 @@
         <br>
         <p>Both Arameans and Hebrews (Israelites) are a Semitic race tracing their lineage back to Shem, son of Noah, but what ties their bound even stronger is Aram, son of Shem.</p>
         <br>
-        <p>Aram, the son of Shem, played a role in forming many nations and spreading his offsprings around the Middle East. He is regarded as being the ancestor of the Arameans and the Jewish people.</p>
+        <p>Aram, the son of Shem, played a role in forming many nations and spreading his offsprings in the Middle East. He is regarded as being the ancestor of the Arameans and the Jewish people.</p>
         <hr class="mt2 bcblack">
         <small class="gray">Published: 2021-01-08, Last update: 2021-01-09</small>
     </article>
