--- a/about/index.html
+++ b/about/index.html
@@ -11,7 +11,7 @@
 
 <article class="pauto wc_xxl">
     <section>
-        <p>The Aramean Institute is a worldwide multi-institute for the Aramean people researching different areas, developing technology, collecting data, educating, offering expertise, and publishing work.</p>    
+        <p>The Aramean Institute is a worldwide multi-institute for the Aramean people researching different areas, developing technology, collecting data, publishing work, offering expertise, and educating.</p>    
     </section>
     <section class="mt2">
         <h2>Mission</h2>
