--- a/about/index.html
+++ b/about/index.html
@@ -29,7 +29,7 @@
     </section>
     <section class="mt2">
         <h2>Vision</h2>
-        <p>Our vision is to populate, protect, and preserve the continuous ancient Aramean heritage and unite all Syrian (Syriac) people under the Aramean term through education.</p>
+        <p>Our vision is to populate, protect, preserve the continuous ancient Aramean heritage, and unite all Syrian (Syriac) people under the Aramean term through education and scientific knowledge.</p>
     </section>
     <section class="mt2">
         <h2>History</h2>
