--- a/index.html
+++ b/index.html
@@ -43,7 +43,13 @@
                 <a href="#" class="button br0 xl_du bcwhite black p0 shade1 f2"><i class="icon32">&times;</i></a>
                 <figure class="pl2 pr2"><img src="assets/img/logo.png"></figure>
             </nav>
-            <a href="research/ethnology" key="2">Ethnology</a>
+            <section>
+                <nav class="sidebar p2 w100 fs13 gaph2- red- bcred pointer afr">
+                    <a href="research/ethnology" key="2">Ethnology</a>
+                    <a href="collection/statistics" key="1">Statistics</a>
+                    <a href="development/technology" key="3">Technology</a>
+                </nav>
+            </section>
             <section>
                 <hr>
                 <a class="fr" href="contribute/" key="2">Contribute</a>
