--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <figure class="pl2 pr2"><img src="assets/img/logo.png"></figure>
             </nav>
             <section>
-                <nav class="sidebar p2 w100 fs13 gaph2- red- bcred pointer afr">
+                <nav class="sidebar pt2 pb2 w100 fs13 gaph2- red- bcred pointer afr">
                     <a href="research/ethnology" key="2">Ethnology</a>
                     <a href="collection/statistics" key="1">Statistics</a>
                     <a href="development/technology" key="3">Technology</a>
