--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-<section class="hm100 bcred white dac" slide="[{ athing: 'quack', dohickey: 3 }]">
+<section class="hm100 bcred white dac">
 
     <nav class="slider tshade1 dc gap05-">
         <div class="sl"><a onclick="alert('c')"><i class="icon64 bcblack02 d0">&#706;</i></a></div>
