--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <form>
             
         </form>
-        <nav class="topbar dark shade05 h2_5 gap2- test- z08 xl_dn fwb" selective="true">
+        <nav class="topbar dark shade05 h2_5 gap2- z08 xl_dn fwb" selective="true">
             <a class="fr bcred yellow p1" href="contribute/" key="2">Contribute</a>
             <a class="pr2" href="contact/" key="3">Contact</a>
             <a class="pr2" href="press/" key="3">Press</a>
