--- a/index.html
+++ b/index.html
@@ -31,31 +31,36 @@
         </nav>
     </header>
 
-    <nav class="topbar white shade1 h4_5 gap2- sred- test-" selective="true">
-        <a href="#menu" class="button xl_du bcwhite black p0 shade1"><i class="icon32">≡</i></a>
+    <nav class="topbar bcwhite shade1 h4_5 gap2- sred-" selective="true">
+        <a href="#menu" class="button xl_du red- p0 shade1"><i class="icon32">≡</i></a>
         <figure><a class="b0" href="./" target="_top" href2="home.html" key="0"><img src="assets/img/logo.png"></a></figure>
         <a href="research/ethnology" key="2">Ethnology</a>
         <a href="collection/statistics" key="1">Statistics</a>
         <a href="development/technology" key="3">Technology</a>
 
-        <div id="menu" class="modal menu">
-            <nav class="topbar flc0 shade h4_5 br0- gap2- sblack- test-">
-                <a href="#" class="button br0 xl_du bcwhite black p0 shade1 f2"><i class="icon32">&times;</i></a>
-                <figure class="pl2 pr2"><img src="assets/img/logo.png"></figure>
+        <div id="menu" class="modal menu bcred">
+            <nav class="topbar flc0 shade h4_5 br0- gap2- sblack-">
+                <a href="#" class="button br0 xl_du white p0 shade1 f2"><i class="icon32">&times;</i></a>
+                <figure class="pl1 pr2"><img src="assets/img/logo.png"></figure>
             </nav>
             <section>
                 <nav class="sidebar pt2 pb2 w100 fs13 gaph2- red- bcred pointer afr">
                     <a href="research/ethnology" key="2">Ethnology</a>
+                    <hr class="p0">
                     <a href="collection/statistics" key="1">Statistics</a>
+                    <hr class="p0">
                     <a href="development/technology" key="3">Technology</a>
+                    <hr class="p0">
+                </nav>
+                <nav class="sidebar">
+                    <a href="contribute/" key="2">Contribute</a>
+                    <a class="pr2" href="contact/" key="3">Contact</a>
+                    <a class="pr2" href="faq/" key="3">FAQ</a>
+                    <a class="pr2" href="about/" key="3">About</a>
                 </nav>
             </section>
             <section>
-                <hr>
-                <a class="fr" href="contribute/" key="2">Contribute</a>
-                <a class="pr2" href="contact/" key="3">Contact</a>
-                <a class="pr2" href="faq/" key="3">FAQ</a>
-                <a class="pr2" href="about/" key="3">About</a>
+
             </section>
         </div>
     </nav>
