--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <a href="collection/statistics" key="1">Statistics</a>
         <a href="development/technology" key="3">Technology</a>
 
-        <div id="menu" class="modal menu bcred">
-            <nav class="topbar flc0 shade h4_5 br0- gap2- sblack-">
-                <a href="#" class="button br0 xl_du white p0 shade1 f2"><i class="icon32">&times;</i></a>
+        <div id="menu" class="modal menu bcred br0">
+            <nav class="topbar flc0 shade h4_5 gap2- sblack-">
+                <a href="#" class="button xl_du yellow- p0 shade1"><i class="icon32">&times;</i></a>
                 <figure class="pl1 pr2"><img src="assets/img/logo.png"></figure>
             </nav>
             <section>
