--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <a href="development/technology" key="3">Technology</a>
 
         <div id="menu" class="modal menu bcred br0">
-            <nav class="topbar flc0 shade h4_5 gap2- sblack-">
+            <nav class="topbar flc0 shade h4_5 gap2- bcblack01 sblack-">
                 <a href="#" class="button xl_du yellow- p0 shade1"><i class="icon32">&times;</i></a>
-                <figure class="pl1 pr2"><img src="assets/img/logo.png"></figure>
+                <figure class="pl1 pr2"><img src="assets/img/logo_white.png"></figure>
             </nav>
             <section>
                 <nav class="sidebar pt2 pb2 w100 fs13 gaph2- red- bcred pointer afr">
