--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,8 @@
-<p>contact@aramean.insitute</p>
-<hr class="mt1 bcred shade1">
-Aramean Institute &middot; <a href="about/">About</a> &middot; <a href="policy/privacy/">Privacy</a> &middot; <a href="policy/cookie/">Cookie</a>
-<hr class="mt1 bcred shade1">
-<a href="https://www.facebook.com/aramean.institute" target="_blank"><i class="icon48 white">&#9429;</i></a>
+<section class="wc_xxl db tac">
+    <a class="pt2" href="about/">About</a> &middot; <a href="policy/privacy/">Privacy</a> &middot; <a href="policy/cookie/">Cookie</a>
+    <hr class="mt1 bcred shade1">
+    <img src="assets/img/logo_white.png" class="flc w25">
+    <hr class="mt1 bcred shade1">
+    <a href="https://www.facebook.com/aramean.institute" target="_blank"><i class="icon48 white">&#9429;</i></a>
+    
+</section>
