--- a/footer.html
+++ b/footer.html
@@ -1,8 +1,8 @@
 <section class="wc_xxl db tac">
     <a class="pt2" href="about/">About</a> &middot; <a href="policy/privacy/">Privacy</a> &middot; <a href="policy/cookie/">Cookie</a>
     <hr class="mt1 bcred shade1">
-    <figure>
-        <img src="assets/img/logo_white.png" class="flc w25">
+    <figure class="flc">
+        <img src="assets/img/logo_white.png" class="w25">
     </figure>
     <hr class="mt1 bcred shade1">
     <a href="https://www.facebook.com/aramean.institute" target="_blank"><i class="icon48 white">&#9429;</i></a>
