--- a/article/mor-michael-rabo-missing-comma-word.html
+++ b/article/mor-michael-rabo-missing-comma-word.html
@@ -17,7 +17,7 @@
     <article class="mt2">
         <p>When Theologian Jean Baptist Chabot released the first edition of his interpretation of The Chronicles of Michael Rabo, he failed to add a comma and the word "Oromoye" to the sentence.</p>
         <br>
-        <p>The error result went viral online for many years and confused many Arameans when it claimed "Othuroye D-henun Suryoye", meaning "Assyrians are Syriacs".</p>
+        <p>The error result went viral online for years and confused many Arameans when it claimed "Othuroye D-henun Suryoye", meaning "Assyrians are Syriacs".</p>
         <br>
         <p>In the first edition, it is clear that it says "Shmohe d-'ame d-ith l-hun sefro d-men bnayo d-Shim", in the subheading but nothing about "Oromoye" in the body text. When reading further on page 11, it reads: "Bnay Shim: Othuroye, Kaldoye, Ludoye, Oromoye D-henun Suryoye, Ebroye, Forsoye"</p>
         <br>
