--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,7 @@
     <a class="pt2" href="about/">About</a> &middot; <a href="policy/privacy/">Privacy</a> &middot; <a href="policy/cookie/">Cookie</a>
     <hr class="mt1 bcred shade1">
     <figure class="flc">
-        <img src="assets/img/logo_white.png" class="w25">
+        <img src="assets/img/logo_red95.png" class="w50p">
     </figure>
     <hr class="mt1 bcred shade1">
     <a href="https://www.facebook.com/aramean.institute" target="_blank"><i class="icon48 white">&#9429;</i></a>
