--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <section class="hm100 bcred white dac">
 
-    <nav class="slider tshade1 dc gap05-">
-        <div class="sl"><a onclick="alert('c')"><i class="icon64 bcblack02 d0">&#706;</i></a></div>
+    <nav class="slider tshade1 dc gap05-" iterate="" datasource="assets/json/articles.json">
+        <div class="sl" skip><a onclick="alert('c')"><i class="icon64 bcblack02 d0">&#706;</i></a></div>
         <input type="radio" name="slidernewdemo" id="sliderdemo1" checked>
         <label for="sliderdemo1" class="footer icon24 pb1">&#9679;</label>
         <section>
@@ -9,7 +9,7 @@
             <article class="white w70">
                 <h1 class="f22">Aram and Israel relations</h1>
                 <h3 class="beige tshade1">"Arameans and the Hebrew Patriarchs have shared origins and marriage ties existed between the peoples."</h3>
-                <a href="article/aram-israel.html" class="button p1 bcyellow red mt2 br05">Read more</a>
+                <a href="article/aram-israel-relations.html" class="button p1 bcyellow red mt2 br05">Read more</a>
             </article>
 
             <figure>
@@ -32,7 +32,7 @@
             </figure>
         </section>
 
-        <div class="sr"><a onclick="alert('c')"><i class="icon64 bcblack02 d0">&#707;</i></a></div>
+        <div class="sr" skip><a onclick="alert('c')"><i class="icon64 bcblack02 d0">&#707;</i></a></div>
     </nav>
 
     
