--- a/contribute/index.html
+++ b/contribute/index.html
@@ -11,6 +11,10 @@
 
 <section class="pauto">
     <article>
-        Not available!
+        <p>Become a supporter. Your contribution makes a difference!</p>
+        <br>
+        <h1>Liberapay</h1>
+        <p><a href="https://liberapay.com/aramean.institute/donate" target="_blank"><img alt="Donate using Liberapay" src="https://liberapay.com/assets/widgets/donate.svg"></a></a>
+            
     </article>
 </section>
