--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
             <article class="white w70">
                 <h1 class="f22">Kaldu-Arameans</h1>
                 <h3 class="beige">"Chaldeans are Arameans from the tribe of Kaldu or (Kasdu) conquering and destroying the Assyrian Empire."</h3>
-                <a href="#" class="button p1 bcyellow red mt2 br05">Read more</a>
+                <a href="article/kaldu-arameans-in-babylon.html" class="button p1 bcyellow red mt2 br05">Read more</a>
             </article>
 
             <figure>
