--- a/contribute/index.html
+++ b/contribute/index.html
@@ -11,10 +11,13 @@
 
 <section class="pauto">
     <article>
-        <p>Become a supporter. Your contribution makes a difference!</p>
+        <p>Consider supporting the valuable work that the Aramean Institute does by donating or sharing with others who want to help.<br>Your contribution and support makes a difference!</p>
         <br>
-        <h1>Liberapay</h1>
-        <p><a href="https://liberapay.com/aramean.institute/donate" target="_blank"><img alt="Donate using Liberapay" src="https://liberapay.com/assets/widgets/donate.svg"></a></a>
-            
+        <form action="https://www.paypal.com/donate" method="post" target="_blank">
+            <input type="hidden" name="hosted_button_id" value="BAQWBFGZ83FVC" />
+            <input type="image" src="https://www.paypalobjects.com/en_US/SE/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+            <img alt="" border="0" src="https://www.paypal.com/en_SE/i/scr/pixel.gif" width="1" height="1" />
+        </form>
+
     </article>
 </section>
