--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <nav class="topbar dark shade05 h2_5 gap2- z08 xl_dn fwb" selective="true">
             <a class="fr bcred yellow p1" href="contribute/" key="2">Contribute</a>
             <a class="pr2" href="contact/" key="3">Contact</a>
-            <a class="pr2" href="press/" key="3">Press</a>
+            <!--<a class="pr2" href="press/" key="3">Press</a>-->
             <a class="pr2" href="faq/" key="3">FAQ</a>
             <a class="pr2" href="about/" key="3">About</a>
         </nav>
