--- a/contribute/index.html
+++ b/contribute/index.html
@@ -9,7 +9,7 @@
     <h1>Contribute</h1>
 </div>
 
-<section class="pauto">
+<section class="pauto wc_xxl">
     <article>
         <p>Consider supporting the valuable work that the Aramean Institute does by donating or sharing with others who want to help.<br>Your contribution and support makes a difference!</p>
         <br>
